--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-samples</artifactId>
 		<version>1.1.0.BUILD-SNAPSHOT</version>
+		<relativePath/>
 	</parent>
 	<artifactId>spring-boot-sample-data-double-jpa</artifactId>
 	<name>spring-boot-sample-data-double-jpa</name>
