Get project working with latest version of spring boot. Fixes #1.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ datasource.person.driverClassName: org.hsqldb.jdbcDriver
 
 datasource.book.url: jdbc:hsqldb:mem:book
 datasource.book.driverClassName: org.hsqldb.jdbcDriver
+
+spring.jpa.generate-ddl: true
+spring.jpa.hibernate.ddl-auto: create
