--- a/pom.xml
+++ b/pom.xml
@@ -3,23 +3,18 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<!-- Your own application should inherit from spring-boot-starter-parent -->
 		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-samples</artifactId>
-		<version>1.1.0.BUILD-SNAPSHOT</version>
-		<relativePath/>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>1.1.7.RELEASE</version>
 	</parent>
 	<artifactId>spring-boot-sample-data-double-jpa</artifactId>
 	<name>spring-boot-sample-data-double-jpa</name>
-	<description>Spring Boot Flyway Sample</description>
+	<description>Spring Boot Dual JPA EntityManagers Sample</description>
 	<url>http://projects.spring.io/spring-boot/</url>
 	<organization>
 		<name>Pivotal Software, Inc.</name>
 		<url>http://www.spring.io</url>
 	</organization>
-	<properties>
-		<main.basedir>${basedir}/../..</main.basedir>
-	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
